# Bluedot-Notifications

./: .env.dist  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  test.py
app/: loader.py  main.py  tasks.py
app/api/: routes.py  scheme.py
app/api/routes/: system.py  webhook.py
app/application/: reminder.py
app/core/: __init__.py  config.py
app/db/: __init__.py  deps.py  session.py
app/domain/: repositories.py
app/infrastructure/: mattermost.py  repositories.py
app/interfaces/: gateways.py
app/models/: __init__.py  notification_log.py
app/services/: google_calendar.py
volumes/postgres/base/1/: pg_internal.init
volumes/postgres/base/5/: 16384  16390  16391  16393  16394
