[project]
name = "bluedot-notifications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "flower>=2.0.1",
    "google-api-python-client>=2.181.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "mattermostdriver>=7.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.12.11",
    "sqlalchemy>=2.0.43",
    "tzdata>=2025.2",
    "uvicorn>=0.35.0",
]
